# AI-Automation

./: README.md  install.sh
ai.-automation-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ai.-automation-frontend/src/: index.css  main.tsx
ai.-automation-frontend/src/app/: router.tsx
ai.-automation-frontend/src/components/AppShell/: AppShell.tsx  Header.tsx  Sidebar.tsx
ai.-automation-frontend/src/components/AppShell/UI/: Button.tsx  Card.tsx
ai.-automation-frontend/src/features/workflows/: types.ts
ai.-automation-frontend/src/lib/: http.ts
ai.-automation-frontend/src/pages/: Dashboard.tsx  Integrations.tsx  NotFound.tsx  Settings.tsx  WorkFlows.tsx
ai.-automation-frontend/src/store/: ui.store.ts
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/ai_automation_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/api/v1/routes/: health.py  runs.py  workflows.py
backend/app/api/v1/routes/integrations/: slack.py
backend/app/core/: celery.py  celery_app.py  config.py
backend/app/db/: session.py
backend/app/db/models/: run.py  user.py  workflow.py
backend/app/pipelines/: parse.py
backend/app/repositories/: run_repo.py  workflow_repo.py
backend/app/schemas/: run.py  workflow.py
backend/app/services/: run_service.py  workflow_service.py
backend/app/tests/: test_health.py
backend/app/workers/: tasks.py
(+2 files in other folders)
