[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automation-backend"
version = "0.1.0"
description = "FastAPI backend for AI+Automation"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.120.3",
  "uvicorn[standard]==0.38.0",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "python-dotenv==1.2.1",
  "sqlalchemy[asyncio]==2.0.44",
  "asyncpg==0.30.0",
  "psycopg2-binary==2.9.11",
  "alembic==1.17.1",
  "httpx==0.28.1",
  "python-jose[cryptography]==3.4.0",
  "passlib[bcrypt]==1.7.4",
  "celery==5.5.3",
  "redis==7.0.1",
  "python-multipart==0.0.20",
  "loguru==0.7.3"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "anyio==4.11.0",
  "ruff==0.14.3",
  "black==25.9.0",
  "pre-commit==4.3.0"
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM"]

[tool.black]
line-length = 100